[metadata]
name = vhr-toolkit
version = attr: vhr_toolkit.__version__
description = Surface reflectance from commercial very high resolution multispectral imagery estimated empirically with synthetic Landsat
long_description = file: README.md
long_description_content_type = text/markdown
keywords = deep-learning, machine-learning
url = https://github.com/nasa-nccs-hpda/vhr-toolkit
author = cisto-data-science-group
author_email = jordan.a.caraballo-vega@nasa.gov
license = MIT
license_file = LICENSE.md
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
project_urls =
    Documentation = https://github.com/nasa-nccs-hpda/vhr-toolkit
    Source = https://github.com/nasa-nccs-hpda/vhr-toolkit
    Issues = https://github.com/nasa-nccs-hpda/vhr-toolkit/issues

[options]
packages = find:
zip_safe = True
include_package_data = True
platforms = any
python_requires = >= 3.8
install_requires =
    xarray

[options.extras_require]
test =
    pytest
    coverage[toml]
    black
docs =
    pdoc==8.0.1
all =
    %(docs)s
    %(test)s